# bonsaiOS

./: .gitignore  Bonsai-OS-Plan.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TURTLES
edk2_bootloader/: BonsaiPkg.dec  BonsaiPkg.dsc  README.md
edk2_bootloader/BonsaiBootloader/: BonsaiBootloader.c  BonsaiBootloader.inf
edk2_bootloader/Kernel/: Makefile  bonsai_kernel.elf  kmain.c  link.lds  sheaf.c  sheaf.h  start.S
include/: boot_info.h
kernel/: CMakeLists.txt  kernel.lds  kernel.lds.in  kmain.cpp  start.S
kernel/sheaf_solver/: CMakeLists.txt
kernel/sheaf_solver/include/sheaf_solver/: cyclic_group.hpp  types.hpp  unified_sheaf_learner.hpp
kernel/sheaf_solver/src/: cyclic_group.cpp  types.cpp  unified_sheaf_learner.cpp
scripts/: setup_toolchain.sh
sheaf_compiler/: FUTURE_WORK.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  auto_patch_discovery.py  character_theory_attention.py  generalized_sheaf_learner.py  graph_analyzer.py  language_demo.py  language_model.py  simple_moe_model.py  tiny_corpus.py  unified_sheaf_learner.py
sheaf_compiler/mlir/: DESIGN.md  generate_all_examples.py  sheaf_emitter.py
sheaf_compiler/mlir/examples/: 01_counting.mlir  02_copy_copy_pos_0.mlir  02_copy_copy_pos_1.mlir  02_copy_copy_pos_2.mlir  03_proof_theorem_0.mlir  03_proof_theorem_1.mlir  04_nse_nse_left.mlir  04_nse_nse_right.mlir  05_language_pos_ADJ.mlir  05_language_pos_DET.mlir  05_language_pos_NOUN.mlir  05_language_pos_PREP.mlir  copy_learned_patch0.mlir  counting_generated.mlir  counting_handwritten.mlir  counting_learned.mlir
uefi/bootloader/: BOOTAA64.EFI  DEPRECATED.md  Makefile  Makefile.minimal  bootloader.elf  link.lds  main.c  main_minimal.c  start.S
uefi/test_app/: Makefile  main.cpp
userspace/: CMakeLists.txt
userspace/examples/: CMakeLists.txt  test_simple.cpp
userspace/init/: CMakeLists.txt
